Bug 472743 - Splitting lines by Shift+Enter: works in the edit window, but not on the canvas
Summary: Splitting lines by Shift+Enter: works in the edit window, but not on the canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 5.1.5
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Alvin Wong
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-28 12:37 UTC by Alexey
Modified: 2023-07-28 14:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
enter (69.75 KB, image/png)
2023-07-28 12:37 UTC, Alexey
Details
shift+enter (70.23 KB, image/png)
2023-07-28 12:38 UTC, Alexey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey 2023-07-28 12:37:38 UTC
Created attachment 160584 [details]
enter

The lines can be separated by pressing Enter. The expected behavior occurs.
But when you press Shift+Enter, the lines are separated in the editor window, but not on the canvas, which is not the expected behavior.
This is misleading, as if the function does not work.


STEPS TO REPRODUCE
1. add some words
2. move the text to another line by pressing Shift+Enter
3. apply text changes

OBSERVED RESULT
the text shows an undivided string

EXPECTED RESULT
the text shows a line break


SOFTWARE/OS VERSIONS
all os
Comment 1 Alexey 2023-07-28 12:38:10 UTC
Created attachment 160585 [details]
shift+enter
Comment 2 Alvin Wong 2023-07-28 14:03:17 UTC
Soft line breaks with Shift + Enter are not supported. I will disable this behaviour in 5.2.
Comment 3 Alvin Wong 2023-07-28 14:28:21 UTC
Git commit 5c98737f4fe9c73ec3031b1584c4fa05c4577e3e by Alvin Wong.
Committed on 28/07/2023 at 16:28.
Pushed by alvinwong into branch 'master'.

svgtexttool: Disable Shift+Enter soft line breaks

M  +17   -0    plugins/tools/svgtexttool/SvgTextEditor.cpp
M  +1    -0    plugins/tools/svgtexttool/SvgTextEditor.h

https://invent.kde.org/graphics/krita/-/commit/5c98737f4fe9c73ec3031b1584c4fa05c4577e3e
Comment 4 Alvin Wong 2023-07-28 14:28:44 UTC
Git commit 54e03e61e29655939bdf70c0f34d86e38476d6d5 by Alvin Wong.
Committed on 28/07/2023 at 16:28.
Pushed by alvinwong into branch 'krita/5.2'.

svgtexttool: Disable Shift+Enter soft line breaks
(cherry picked from commit 5c98737f4fe9c73ec3031b1584c4fa05c4577e3e)

M  +17   -0    plugins/tools/svgtexttool/SvgTextEditor.cpp
M  +1    -0    plugins/tools/svgtexttool/SvgTextEditor.h

https://invent.kde.org/graphics/krita/-/commit/54e03e61e29655939bdf70c0f34d86e38476d6d5