svgtexttool: Disable Shift+Enter soft line breaks

BUG:472743
(cherry picked from commit 5c98737f4fe9c73ec3031b1584c4fa05c4577e3e)