plugins/tools/svgtexttool/SvgTextEditor.h
@@ -126,6 +126,7 @@ Q_SIGNALS:
 
 protected:
     void wheelEvent(QWheelEvent *event) override;
+    bool eventFilter(QObject *watched, QEvent *event) override;
     /**
      * Selects all if there is no selection
      * @returns a copy of the previous cursor.
